# forca_competitiva

./: .gitignore  INTEGRATION_TODO.md  README.md  main.py  o_que_aprendi_davi.md  pyproject.toml
client/: main.py  network.py
client/views/: game_view.py  host_view.py  menu_view.py  player_waiting_view.py  podium_view.py
game/: hangman.py
lobby/: lobby.py
server/: round.py  tcp_client.py  tcp_server.py  test_client.py  udp_client.py  udp_server.py
tests/integration/: test_game_simulation.py
tests/unit/: test_hangman.py
