[tool.hatch.build.targets.wheel]
packages = ["game", "lobby", "server"]

[project]
name = "forca-competitiva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arcade>=3.3.3",
    "loguru>=0.7.3",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
